Fixed wrong link color on ios and menu button text shrinking problem on mobiles

--- a/assets/scss/layout/_header.scss
+++ b/assets/scss/layout/_header.scss
@@ -40,6 +40,11 @@
   display: none;
   border-radius: 12px;
   cursor: pointer;
+  min-width: fit-content;
+
+  &__label {
+    color: var(--wp--preset--color--tumehall);
+  }
 }
 .primary-nav {
   margin-left: auto;
